# qaguru_lesson_21

./: .env  .env.android  .env.ios  .env.local.example  .env.remote  .gitignore  Readme.MD  config.py  env.android  pyproject.toml  pytest.ini
tests/: conftest.py
tests/android/: conftest.py  test_wikipedia.py
tests/ios/: test_notes.py
utils/: attach.py  resource_handler.py
